# afs-tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  flake.nix  pyproject.toml
afs_tools/: __main__.py  afsops.py  config.py  ldapops.py  sync.py  utils.py
releasenotes/notes/: init-8e3577de0726dc6e.yaml
